--- a/EpubProcess/EpubProcess.csproj
+++ b/EpubProcess/EpubProcess.csproj
@@ -24,30 +24,46 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Script\Example.cs">
+    <Resource Include="Script\0.FullToHalf.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Script\Example.cs">
+    <Compile Update="Script\2.EpubFormat.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
-    <Compile Update="Script\ExampleReg.cs">
+    <Compile Update="Script\0.FullToHalf.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Compile Update="Script\3.ExampleReg.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Script\Example.js">
+    <None Update="Script\9.CodePretty.py">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Script\0.Example.py">
+    <None Update="Script\其他样例\Example.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Script\1.Example.py">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Script\Res\html.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Script\Res\style.css">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="腦漿炸裂Girl %281%29.epub">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Script\Res\" />
   </ItemGroup>
 
 </Project>
