--- a/EpubProcess/EpubProcess.csproj
+++ b/EpubProcess/EpubProcess.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="AngleSharp.Xml" Version="0.16.0" />
     <PackageReference Include="IronPython" Version="3.4.0-alpha1" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.10.0" />
+    <PackageReference Include="pythonnet" Version="3.0.0-preview2021-08-03" />
   </ItemGroup>
 
   <ItemGroup>
@@ -42,7 +43,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Script\9.CodePretty.py">
+    <None Update="Script\其他样例\9.CodePretty.py">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Script\其他样例\Example.js">
